# rusty_skylines

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  changelog.txt  default_keybinds.toml  keybinds.toml  licenses.html
.github/workflows/: build-binaries.yml
data/: default_keybinds.toml  edited_chunks  gui_layout_UI CRAP.json  keybinds.toml  settings.toml
data/saves/: New World.rss  first_save_ever.rss
data/shaders/: buildings.wgsl  car.wgsl  car_instance_id.wgsl  car_shadows.wgsl  fog.wgsl  fog_msaa.wgsl  ground.wgsl  gtao_upsample_apply.wgsl  lines.wgsl  props.wgsl  props_instance_id.wgsl  props_shadows.wgsl  ray_tracing_apply.wgsl  resolved_to_msaa_copy.wgsl  road.wgsl  shadows.wgsl  sky.wgsl  ssao.wgsl  ssao_apply.wgsl  ssao_blur.wgsl  ssao_blur_msaa.wgsl  ssao_gen.wgsl  ssao_gen_msaa.wgsl  ssao_msaa.wgsl  stars.wgsl  terrain.wgsl  text.wgsl  text3d.wgsl  thick_lines.wgsl  tonemap.wgsl  triangle.wgsl  ui_background.wgsl  ui_circle.wgsl  ui_circle_glow.wgsl  ui_handle.wgsl  ui_polygon.wgsl  ui_rect.wgsl  ui_rect_blur.wgsl  ui_rect_glow.wgsl  ui_shape_outline.wgsl  (+2 more)
data/shaders/compute/: blue_noise_init.wgsl  blue_noise_output.wgsl  blue_noise_step.wgsl  downsample_linear_depth.wgsl  downsample_normals.wgsl  fog.wgsl  gtao_apply.wgsl  gtao_blur.wgsl  gtao_blur_2d.wgsl  gtao_generate.wgsl  gtao_prep.wgsl  gtao_upsample.wgsl  linearize_depth.wgsl  ray_tracing.wgsl  ray_tracing_upsample.wgsl  resolve_depth.wgsl  resolve_depth_single_sample.wgsl
data/shaders/includes/: shadow.wgsl  uniforms.wgsl
data/shaders/textures/: asphalt.wgsl  bark.wgsl  concrete.wgsl  dirt.wgsl  goo.wgsl  (+8 more)
data/ui_data/: gui_layout.json  gui_layout.yaml
src/: app.rs  camera.rs  chunk_builder.rs  commands.rs  data.rs  events.rs  hsv.rs  input.rs  main.rs  mouse_ray.rs  paths.rs  positions.rs  resources.rs  settings.toml  simulation.rs  simulation_controls.rs  sky.rs  state.rs  terrain.rs  threads.rs  touch_handler.rs  ui.rs  vertex.rs  water.rs  world.rs
src/cars/: car_mesh.rs  car_player.rs  car_render.rs  car_structs.rs  car_subsystem.rs  mod.rs
src/components/: camera.rs  mod.rs  rigidbody.rs  sprite.rs  transform.rs
src/helpers/: hsv.rs  mod.rs  mouse_ray.rs  paths.rs  positions.rs
src/renderer/: astronomy.rs  benchmark.rs  compute_system.rs  core.rs  general_mesh_arena.rs  gizmo.rs  gpu_profiler.rs  helper.rs  input.rs  mesh_arena.rs  mod.rs  parser.rs  pipelines.rs  pipelines_outsource.rs  procedural_bind_group_manager.rs  procedural_render_manager.rs  procedural_texture_manager.rs  props.rs  render_core.rs  render_passes.rs  shader_watcher.rs  shadows.rs  taa.rs  terrain_subsystem.rs  touches.rs  ui.rs  ui_editor.rs  ui_pipelines.rs  ui_text.rs  ui_text_rendering.rs  ui_upload.rs  uniform_updates.rs  world_renderer.rs
src/systems/: audio.rs  car_events.rs  input.rs  mod.rs  physics.rs  render.rs  simulation.rs  small_systems.rs  systems.rs  ui.rs
src/terrain/: chunk_builder.rs  mod.rs  sky.rs  terrain.rs  terrain_editing.rs  threads.rs
src/ui/: action_parser.rs  actions.rs  cache.rs  helper.rs  input.rs  layout.rs  menu.rs  mod.rs  parser.rs  selections.rs  special_actions.rs  system.rs  theme.rs  touches.rs  ui_edit_manager.rs  ui_editor.rs  ui_edits.rs  ui_loader.rs  ui_runtime.rs  ui_text_editing.rs  ui_touch_manager.rs  uiruntime.rs  variables.rs  vertex.rs  widgets.rs
src/world/: astronomy.rs  camera.rs  game_state.rs  mod.rs  terrain_subsystem.rs  world.rs  world_core.rs  world_state.rs
(+90 files in other folders)
