[package]
name = "Rusty_Skylines"
version = "0.5.17"
edition = "2024"

[dependencies]
winit = { version = "0.30.12", features = ["serde"] }

wgpu = "28.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.32.0"
toml = "1.0.1+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
fontdue = "0.9.3"
rect_packer = "0.2.1"
anyhow = "1.0.101"
notify = "9.0.0-rc.2"
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
fastnoise-lite = "1.1.1"
rand = "0.10.0"
zstd = "0.13.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde_yaml = { version = "0.9.34+deprecated" }
wgpu_render_manager = "0.2.5"
earcutr = "0.5.0"
clipper2 = "0.5.3"
log = "0.4.29"

[profile.fastdev]
inherits = "release"      # start with release defaults
opt-level = 3         # override with release-level speed (the same lol)
debug = true           # keep debug symbols
split-debuginfo = "packed"
overflow-checks = true
lto = false
