[package]
name = "Rusty_Skylines"
version = "0.7.6"
edition = "2024"

[dependencies]
winit = { version = "0.31.0-beta.2", features = ["serde"] }

wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["serde"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
notify = "9.0.0-rc.4"
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
fastnoise-lite = "1.1.1"
rand = "0.10.1"
zstd = "0.13.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde_yaml = { version = "0.9.34" }
wgpu_render_manager = "0.2.12"
earcutr = "0.5.0"
clipper2-rust = "1.0.3"
log = "0.4.29"
rayon = "1.12.0"
cpal = "0.17.3"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
wgpu_text = "29.0.0"
sanitize-filename = "0.7.0-beta"
image = "0.25.10"
dirs = "6.0.0"
chrono = "0.4.44"
strum_macros = "0.28.0"
strum = "0.28.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.fastdev]
inherits = "release"      # start with release defaults
opt-level = 1         # override with release-level speed (the same lol)
debug = true           # keep debug symbols
split-debuginfo = "packed"
overflow-checks = true
lto = false
